# xinv3d

./: Changelog  Makefile  Makefile.am  README  changelog  configure.ac  control  copyright  effects.c  game.c  gtext.h  main-x11.c  menu  rules  xinv3d.6  xinv3d.pc.in
desktop/: Makefile.am  xinv3d.appdata.xml  xinv3d.desktop  xinv3d.metainfo.xml
